# roboticstest

./: CMakeList.txt  main.py  main.qml  package.xml  roboticstest.pyproject
.qtcreator/Python_3_12_64_bit_venv/: pyvenv.cfg
.qtcreator/Python_3_12_64_bit_venv/Scripts/: activate  activate.bat
launch/: nova5_control_launch.py
src/: gui.qml  main.py  nova5_control_node.py  nova5_status_node.py
