<package format="2">
  <name>ros_nova5_control</name>
  <version>0.0.1</version>
  <description>ROS 2 Nova5 Control with PyQt GUI</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>PySide6</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
